--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,37 +13,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-26 Thu 14:32]
+#+CAPTION: Clock summary at [2017-01-26 Thu 15:56]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *64:28* |       |       | 100.0 |
+| *Total time*                                                                | *65:49* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 64:28   |       |       | 100.0 |
-| Active                                                                      |         | 64:28 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:50 |   4.4 |
+| Stories                                                                     | 65:49   |       |       | 100.0 |
+| Active                                                                      |         | 65:49 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  3:02 |   4.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   0.9 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.3 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  16.0 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.1 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  15.6 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.0 |
 | COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.3 |
-| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.6 |
+| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.5 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.5 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  20.9 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |   9.8 |
-| COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.3 |
-| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.1 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  20.5 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |   9.6 |
+| COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.2 |
+| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.0 |
 | COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   1.6 |
 | COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   1.6 |
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.4 |
-| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.3 |
-| COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.4 |
-| STARTED Rename primitives to built-insert                                   |         |       |  2:11 |   3.4 |
-| STARTED Add mapping support between upsilon and LAM                         |         |       |  1:56 |   3.0 |
-| STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.2 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  10.7 |
-| STARTED Map upsilon primitives to intrinsics                                |         |       |  3:04 |   4.8 |
-| STARTED Strong type aliasing                                                |         |       |  0:20 |   0.5 |
+| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.2 |
+| COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.3 |
+| COMPLETED Rename primitives to built-in                                     |         |       |  2:20 |   3.5 |
+| STARTED Create a new yarn type for primitives                               |         |       |  1:20 |   2.0 |
+| STARTED Add mapping support between upsilon and LAM                         |         |       |  1:56 |   2.9 |
+| STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.1 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  10.5 |
+| STARTED Map upsilon primitives to intrinsics                                |         |       |  3:04 |   4.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -568,24 +568,26 @@ by renaming the current =primitive= to =built_in=. We should end up
 with no references at all to this name.
 
 *** STARTED Create a new yarn type for primitives                     :story:
+    CLOCK: [2017-01-26 Thu 15:29]--[2017-01-26 Thu 15:56] =>  0:27
     CLOCK: [2017-01-26 Thu 15:04]--[2017-01-26 Thu 15:15] =>  0:11
     CLOCK: [2017-01-26 Thu 14:42]--[2017-01-26 Thu 15:04] =>  0:22
     CLOCK: [2017-01-26 Thu 09:40]--[2017-01-26 Thu 10:00] =>  0:20
 
-- add a new yarn element: primitive.
+- add a new yarn element: primitive. Add an attribute of type name
+  called =underlying_element=.
+- add an is nullable flag, settable from meta-data. If true, the
+  primitive can be null.
 - add a stereotype for primitive.
 - add a meta-data parameter for the underlying type. Make it the same
-  as for enumerations. Read the meta-data parameter somewhere in yarn
-  expansion.
-- add a
-
-- Add validation to ensure the element is always a built-in. Actually,
-  this is fine for enumerations but not for "primitives". We need an
-  additional parameter on each element (can be the underlying element
-  of a primitive?).
-- add formatters.
-
-
+  as for enumerations.
+- add a primitive expander, similar to the enumeration expander in
+  intermediate model expansion. Read the meta-data parameter there.
+- add a property to type: =can_be_primitive_underlier=. Add JSON
+  support for it. Set it to true to all built-ins and for strings.
+- Add validation to ensure the underlier is valid.
+- add formatters for primitive across all facets and languages.
+- add a test model for each language with primitives that test all
+  built-ins and string.
 
 *Previous Understanding*
 
