--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,36 +13,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-26 Thu 16:07]
+#+CAPTION: Clock summary at [2017-01-26 Thu 16:42]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *65:59* |       |       | 100.0 |
+| *Total time*                                                                | *66:34* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 65:59   |       |       | 100.0 |
-| Active                                                                      |         | 65:59 |       | 100.0 |
+| Stories                                                                     | 66:34   |       |       | 100.0 |
+| Active                                                                      |         | 66:34 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:02 |   4.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   0.9 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.3 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  15.6 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  15.5 |
 | COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.0 |
 | COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.2 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.5 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.5 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  20.4 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |   9.6 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  20.2 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |   9.5 |
 | COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.2 |
 | COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.0 |
 | COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   1.6 |
 | COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   1.6 |
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.4 |
-| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.2 |
+| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.1 |
 | COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.3 |
 | COMPLETED Rename primitives to built-in                                     |         |       |  2:20 |   3.5 |
-| STARTED Create a new yarn type for primitives                               |         |       |  1:30 |   2.3 |
+| STARTED Create a new yarn type for primitives                               |         |       |  2:05 |   3.1 |
 | STARTED Add mapping support between upsilon and LAM                         |         |       |  1:56 |   2.9 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.1 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  10.5 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  10.4 |
 | STARTED Map upsilon primitives to intrinsics                                |         |       |  3:04 |   4.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -568,6 +568,7 @@ by renaming the current =primitive= to =built_in=. We should end up
 with no references at all to this name.
 
 *** STARTED Create a new yarn type for primitives                     :story:
+    CLOCK: [2017-01-26 Thu 16:07]--[2017-01-26 Thu 16:42] =>  0:35
     CLOCK: [2017-01-26 Thu 15:56]--[2017-01-26 Thu 16:06] =>  0:10
     CLOCK: [2017-01-26 Thu 15:29]--[2017-01-26 Thu 15:56] =>  0:27
     CLOCK: [2017-01-26 Thu 15:04]--[2017-01-26 Thu 15:15] =>  0:11
