--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,36 +13,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-26 Thu 16:54]
+#+CAPTION: Clock summary at [2017-01-26 Thu 18:29]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *66:45* |       |       | 100.0 |
+| *Total time*                                                                | *67:12* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 66:45   |       |       | 100.0 |
-| Active                                                                      |         | 66:45 |       | 100.0 |
+| Stories                                                                     | 67:12   |       |       | 100.0 |
+| Active                                                                      |         | 67:12 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:02 |   4.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   0.9 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.3 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  15.4 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  15.3 |
 | COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.0 |
 | COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.2 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.5 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.5 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  20.2 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |   9.5 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  20.0 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |   9.4 |
 | COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.2 |
 | COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.0 |
 | COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   1.5 |
 | COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   1.6 |
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.4 |
-| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.1 |
+| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.0 |
 | COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.3 |
 | COMPLETED Rename primitives to built-in                                     |         |       |  2:20 |   3.5 |
-| STARTED Create a new yarn type for primitives                               |         |       |  2:16 |   3.4 |
+| STARTED Create a new yarn type for primitives                               |         |       |  2:43 |   4.0 |
 | STARTED Add mapping support between upsilon and LAM                         |         |       |  1:56 |   2.9 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.1 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  10.4 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  10.3 |
 | STARTED Map upsilon primitives to intrinsics                                |         |       |  3:04 |   4.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -568,6 +568,9 @@ by renaming the current =primitive= to =built_in=. We should end up
 with no references at all to this name.
 
 *** STARTED Create a new yarn type for primitives                     :story:
+    CLOCK: [2017-01-26 Thu 18:21]--[2017-01-26 Thu 18:29] =>  0:06
+    CLOCK: [2017-01-26 Thu 18:16]--[2017-01-26 Thu 18:20] =>  0:04
+    CLOCK: [2017-01-26 Thu 17:54]--[2017-01-26 Thu 18:09] =>  0:15
     CLOCK: [2017-01-26 Thu 16:43]--[2017-01-26 Thu 16:54] =>  0:11
     CLOCK: [2017-01-26 Thu 16:07]--[2017-01-26 Thu 16:42] =>  0:35
     CLOCK: [2017-01-26 Thu 15:56]--[2017-01-26 Thu 16:06] =>  0:10
@@ -640,16 +643,6 @@ because an alias implies they are interchangeable; this is what one is
 trying to avoid. One sneaky way out is to call primitives "builtins"
 and call these "primitives". This somewhat reflects the truth in that
 builtins are supposed to be hardware level concepts.
-
-*** Tidy-up "is floating point"                                       :story:
-
-We should introduce "point type" enumeration to replace "is floating
-point":
-
-- none
-- floating
-- fixed
-- exact
 
 *** STARTED Add mapping support between upsilon and LAM               :story:
     CLOCK: [2017-01-26 Thu 06:57]--[2017-01-26 Thu 07:40] =>  0:43
@@ -820,6 +813,16 @@ Another alternative is to apply hard-coded regexes:
 
 Finally, the last option may be to have yet another mapping data file
 format that lists the primitives to unbox.
+
+*** Tidy-up "is floating point"                                       :story:
+
+We should introduce "point type" enumeration to replace "is floating
+point":
+
+- none
+- floating
+- fixed
+- exact
 
 *** Enumerations coming out of Upsilon are empty                      :story:
 
