--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-26 Thu 18:42]
+#+CAPTION: Clock summary at [2017-01-26 Thu 18:48]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *67:24* |       |       | 100.0 |
+| *Total time*                                                                | *67:29* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 67:24   |       |       | 100.0 |
-| Active                                                                      |         | 67:24 |       | 100.0 |
+| Stories                                                                     | 67:29   |       |       | 100.0 |
+| Active                                                                      |         | 67:29 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:02 |   4.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   0.9 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.3 |
@@ -37,12 +37,12 @@
 | COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   1.6 |
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.4 |
 | COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.0 |
-| COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.3 |
+| COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.2 |
 | COMPLETED Rename primitives to built-in                                     |         |       |  2:20 |   3.5 |
-| STARTED Create a new yarn type for primitives                               |         |       |  2:55 |   4.3 |
+| STARTED Create a new yarn type for primitives                               |         |       |  3:00 |   4.4 |
 | STARTED Add mapping support between upsilon and LAM                         |         |       |  1:56 |   2.9 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.1 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  10.3 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  10.2 |
 | STARTED Map upsilon primitives to intrinsics                                |         |       |  3:04 |   4.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -568,6 +568,7 @@ by renaming the current =primitive= to =built_in=. We should end up
 with no references at all to this name.
 
 *** STARTED Create a new yarn type for primitives                     :story:
+    CLOCK: [2017-01-26 Thu 18:43]--[2017-01-26 Thu 18:48] =>  0:05
     CLOCK: [2017-01-26 Thu 18:30]--[2017-01-26 Thu 18:42] =>  0:12
     CLOCK: [2017-01-26 Thu 18:21]--[2017-01-26 Thu 18:29] =>  0:06
     CLOCK: [2017-01-26 Thu 18:16]--[2017-01-26 Thu 18:20] =>  0:04
