--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-26 Thu 18:48]
+#+CAPTION: Clock summary at [2017-01-26 Thu 18:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *67:29* |       |       | 100.0 |
+| *Total time*                                                                | *67:33* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 67:29   |       |       | 100.0 |
-| Active                                                                      |         | 67:29 |       | 100.0 |
+| Stories                                                                     | 67:33   |       |       | 100.0 |
+| Active                                                                      |         | 67:33 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:02 |   4.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   0.9 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.3 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  15.3 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  15.2 |
 | COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.0 |
 | COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.2 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.5 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.5 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  20.0 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  19.9 |
 | COMPLETED Add a type mapper                                                 |         |       |  6:19 |   9.4 |
 | COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.2 |
 | COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.0 |
@@ -39,7 +39,7 @@
 | COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.0 |
 | COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.2 |
 | COMPLETED Rename primitives to built-in                                     |         |       |  2:20 |   3.5 |
-| STARTED Create a new yarn type for primitives                               |         |       |  3:00 |   4.4 |
+| STARTED Create a new yarn type for primitives                               |         |       |  3:04 |   4.5 |
 | STARTED Add mapping support between upsilon and LAM                         |         |       |  1:56 |   2.9 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.1 |
 | STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  10.2 |
@@ -568,6 +568,7 @@ by renaming the current =primitive= to =built_in=. We should end up
 with no references at all to this name.
 
 *** STARTED Create a new yarn type for primitives                     :story:
+    CLOCK: [2017-01-26 Thu 18:49]--[2017-01-26 Thu 18:53] =>  0:04
     CLOCK: [2017-01-26 Thu 18:43]--[2017-01-26 Thu 18:48] =>  0:05
     CLOCK: [2017-01-26 Thu 18:30]--[2017-01-26 Thu 18:42] =>  0:12
     CLOCK: [2017-01-26 Thu 18:21]--[2017-01-26 Thu 18:29] =>  0:06
