--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,36 +13,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-26 Thu 22:53]
+#+CAPTION: Clock summary at [2017-01-26 Thu 23:21]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *68:07* |       |       | 100.0 |
+| *Total time*                                                                | *68:36* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 68:07   |       |       | 100.0 |
-| Active                                                                      |         | 68:07 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  3:02 |   4.5 |
+| Stories                                                                     | 68:36   |       |       | 100.0 |
+| Active                                                                      |         | 68:36 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  3:02 |   4.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   0.9 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.2 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  15.1 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.0 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  15.0 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   1.9 |
 | COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.2 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.5 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.5 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  19.8 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |   9.3 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  19.6 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |   9.2 |
 | COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.2 |
-| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.0 |
+| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   1.9 |
 | COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   1.5 |
 | COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   1.5 |
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.4 |
 | COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   6.9 |
 | COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.2 |
 | COMPLETED Rename primitives to built-in                                     |         |       |  2:20 |   3.4 |
-| STARTED Create a new yarn type for primitives                               |         |       |  3:38 |   5.3 |
+| STARTED Create a new yarn type for primitives                               |         |       |  4:07 |   6.0 |
 | STARTED Add mapping support between upsilon and LAM                         |         |       |  1:56 |   2.8 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.1 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  10.2 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  10.1 |
 | STARTED Map upsilon primitives to intrinsics                                |         |       |  3:04 |   4.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -568,6 +568,7 @@ by renaming the current =primitive= to =built_in=. We should end up
 with no references at all to this name.
 
 *** STARTED Create a new yarn type for primitives                     :story:
+    CLOCK: [2017-01-26 Thu 22:51]--[2017-01-26 Thu 23:20] =>  0:29
     CLOCK: [2017-01-26 Thu 22:43]--[2017-01-26 Thu 22:50] =>  0:07
     CLOCK: [2017-01-26 Thu 22:15]--[2017-01-26 Thu 22:42] =>  0:27
     CLOCK: [2017-01-26 Thu 18:49]--[2017-01-26 Thu 18:53] =>  0:04
